--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "cups-filters-1.0.43.tar.xz": 39bcbb3822da17fb68389933436fb8e5f23e90f4
+  cups-filters-1.0.49.tar.xz: 49b4dcfb901cd355237b0f370ca5737aba953be5
